@@ -36,6 +36,10 @@ Version 2.5.0
   + Expose NEC Vector Engine cards on Linux as OS devices of subtype
     "VectorEngine" and name "ve0", etc.
     Thanks to Anara Kozhokanova, Tim Cramer and Erich Focht for the help.
+  + Add a NVLinkBandwidth distances structure between NVIDIA GPUs
+    (and POWER processor or NVSwitches) in the NVML backend.
+    See Topology Attributes: Distances, Memory Attributes and CPU Kinds
+    in the documentation.
 * Build
   + Add --with-cuda-version=<version> or look at the CUDA_VERSION
     environment variable to find the appropriate CUDA pkg-config files.
